# LIMITI_SUMMER_CAMP_CV

./: README.md
mkd/: IP摄像头调用手机摄像头.md  opencv_dnn模型训练.md  ubuntu20.04更换国内源.md  夏令营培训1.md  夏令营培训2——OpenCV基础学习.md  夏令营培训3——串口.md  夏令营培训4——PCL.md  夏令营培训4——滤波.md  夏令营培训5——PCL.md  夏令营培训5——ROS.md  夏令营培训6——ROS.md  安装pcl.md
附件/DNN相关/: MYyolo.rar  pycreat.py  pytx.py
附件/DNN相关/MYyolo/: yolo-fastest-xl.cfg  yolo-fastest.cfg  yolo-fastest.data  yolo-fastest.names  yolo-fastestNew.cfg
附件/DNN相关/自动标数据集/: CMakeLists.txt  README.md  main.cpp
附件/DNN相关/自动标数据集/DNN_Folder/图片/: yolo-fastest-xl_last15000.weights
附件/DNN相关/自动标数据集/DNN_Folder/点云/: yolo-fastest-xl.cfg
附件/DNN相关/自动标数据集/include/: WriteXml.hpp
附件/DNN相关/自动标数据集/src/: WriteXml.cpp
附件/代码/dnn_template/: CMakeLists.txt  README.md  main.cpp
附件/代码/dnn_template/DNN_Folder/图片/: yolo-fastest-xl.cfg  yolo-fastest-xl_37000.weights  yolo-fastest.names
附件/代码/dnn_template/DNN_Folder/点云/: yolo-fastest-xl_70000.weights  yolo-fastest.names
附件/代码/dnn_template/include/: DNN.hpp
附件/代码/dnn_template/src/: DNN.cpp
附件/代码/uart_template/: CMakeLists.txt  main.cpp
附件/代码/uart_template/include/: Uart.hpp
附件/代码/uart_template/src/: Uart.cpp
